# composio_assignment

./: .gitignore  README.md  vercel.json
backend/: pyproject.toml  review_server.py  vercel.json
backend/data/: apps.csv
backend/data/cache/: discovery_ahrefs.json  discovery_aircall.json  discovery_airtable.json  discovery_amazon_selling_partner.json  discovery_apify.json  discovery_asana.json  discovery_attio.json  discovery_bigcommerce.json  discovery_binance.json  discovery_brex.json  discovery_bright_data.json  discovery_clay.json  discovery_clickup.json  discovery_close.json  discovery_cloudflare.json  discovery_coda.json  discovery_consensus.json  discovery_copper.json  discovery_datadog.json  discovery_dataforseo.json  discovery_dealcloud.json  discovery_devin.json  discovery_discord.json  discovery_ecwid.json  discovery_fanbasis.json  discovery_fathom.json  discovery_firecrawl.json  discovery_freshdesk.json  discovery_front.json  discovery_github.json  discovery_gladly.json  discovery_gohighlevel.json  discovery_google_ads.json  discovery_gorgias.json  discovery_grain.json  discovery_gumroad.json  discovery_harvest.json  discovery_help_scout.json  discovery_higgsfield.json  discovery_hubspot.json  (+60 more)
backend/models/: __init__.py  app.py  discovery.py  evidence.py  extraction.py  result.py  validation.py
backend/output/: case_study.html  index.html  research_data.csv
backend/prompts/: extraction.md  insights.md  validation.md
backend/src/: cli.py  config.py
backend/templates/: app_detail.html  report.html
backend/tests/: benchmark_browser_verify.py
(+209 files in other folders)
