[project]
name = "composio-research-agent"
version = "1.0.0"
description = "Evidence-driven AI research pipeline for SaaS app analysis"
requires-python = ">=3.12"
dependencies = [
    # LLM (semantic extraction only)
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",

    # Discovery
    "tavily-python>=0.5.0",

    # Evidence collection
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",

    # Browser verification
    "playwright>=1.48.0",

    # Data models
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Analytics
    "pandas>=2.2.0",
    "plotly>=5.24.0",

    # Report
    "jinja2>=3.1.0",

    # CLI & UX
    "typer>=0.12.0",
    "rich>=13.9.0",

    # Utilities
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
research = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "models"]
